--- a/account/pyproject.toml
+++ b/account/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.11"
 pytest = "^7.2.2"
 
 [tool.poetry.scripts]
-start-tests = 'tests.test_utils:main'
+start-tests = 'account.main:up_first'
 
 [build-system]
 requires = ["poetry-core"]
